kubernetes/manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authenticwrite
  labels:
    app: authenticwrite
